agrego Middleware de cache

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    //"ConexionSql": "Data Source=NOT026;Initial Catalog=EcommerceAPI;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "ConexionSql": "Data Source=NOT026;Initial Catalog=EcommerceAPI;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
